--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <img src="./img/img06.png">
+                    <img src="img06.png" alt="">
                     <h4> Burgers and fries</h4>
                     <p> <i>Since opening in Fall 2008, OnlyBurger has developed a devoted following of Triangle food lovers, first drawn to their mobile burger truck and now to their Shannon Road restaurant in Durham. The OnlyBurger truck is the poster child for the exploding Durham mobile food scene and continues to roam the streets, strategically positioned</i> </p>             
                     <a href="./index.html" class="ctn">order</a>
