--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
                     <a href="./index.html" class="ctn">order</a>
                 </div>
                 <div class="col">
-                    <img src="./img/img05.png" alt="">
+                    <img src="img05.png" alt="">
                     <h4> Biryani</h4>
                     <p><i>Biryani  is a mixed rice dish originating among the Muslims of the Indian subcontinent. It is made with Indian spices, rice, and usually some type of meat (chicken, beef, goat, lamb, prawn, fish) or in some cases without any meat, and sometimes, in addition, eggs and potatoes.[1]</i> </p>
 
@@ -54,10 +54,10 @@
                     </div>
                     <div class="col imgae-col ">
                         <div class="image-gallery">
-                            <img src="./img/img09.png" alt="">
-                            <img src="./img/img04.png" alt="">
-                            <img src="./img/img08.png" alt="">
-                            <img src="./img/img07.png" alt="">
+                            <img src="img09.png" alt="">
+                            <img src="img04.png" alt="">
+                            <img src="img08.png" alt="">
+                            <img src="img07.png" alt="">
                         </div>
                     </div>
                 </div>
